# compliance-trestle-demos

./: .gitmodules  .pre-commit-config.yaml  MAINTAINERS.md  Makefile  README.md  setup.cfg
.github/workflows/: python-test.yml
CIS_controls/: README.md  create_cis_catalogs_profiles.py
catalogs/ISM_April_2020/: catalog.json
catalogs/ISM_August_2019/: catalog.json
catalogs/ISM_August_2020/: catalog.json
catalogs/ISM_December_2018/: catalog.json
catalogs/ISM_December_2020/: catalog.json
catalogs/ISM_February_2019/: catalog.json
catalogs/ISM_February_2020/: catalog.json
catalogs/ISM_January_2020/: catalog.json
catalogs/ISM_January_2021/: catalog.json
scripts/ISM/: ISM.py
ssp_author_demo/: README.md
trestle_flask_api/: Makefile  README.md  setup.cfg  setup.py
trestle_flask_api/compliance_trestle_flask_demo/: __init__.py  __main__.py  app.py
trestle_k8s/: Kubernetes-Yaml-to-OSCAL-Mapping.xlsx  Makefile  README.md  k8s-to-oscal.py
trestle_repo_api_examples/: README.md  repo-examples.py
trestle_sdk_examples/: README.md  create_a_catalog.py
trestle_task_cis_xlsx_to_oscal_cd/: CIS_IBM_Db2_11_Benchmark_v1.1.0.note  CIS_Sample_Red_Hat_OpenShift_Container_Platform_Benchmark_v1.7.0.xlsx  Makefile  README.md  cis-xlsx-to-oscal-cd.db2.snippet.config  cis-xlsx-to-oscal-cd.snippet.config
trestle_task_osco_result_to_oscal_ar/: README.md  demo-osco-result-to-oscal-ar.config
trestle_task_osco_to_oscal/: README.md  demo-osco-to-oscal.config
trestle_task_spread_sheet_to_component_definition/: README.md  demo-xlsx-to-cd.config  demo-xlsx-to-component-definition.config
trestle_task_xccdf_result_to_oscal_ar/: README.md  demo-xccdf-result-to-oscal-ar.config
(+391 files in other folders)
