[metadata]
name = compliance-trestle-flaks-demo
version = 0.0.1
description = Demo API wrapping pydanitc using flask.
author = Chris Butler
author_email = chris@thebutlers.me
license = Apache Software License v2
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages = find:
install_requires =
    compliance-trestle
    flask-pydantic

[options.packages.find]
exclude =
    test

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    trestle = demo.app:run

[options.extras_require]
dev =
    pytest>=5.4.3
    pytest-cov>=2.10.0
    pre-commit>=2.4.0
    setuptools
    wheel
    pip
    yapf
    semantic-release
    flake8
    flake8-2020
    flake8-broken-line
    flake8-bugbear
    flake8-builtins
    flake8-commas
    flake8-comprehensions
    flake8-docstrings
    flake8-eradicate
    flake8-import-order
    flake8-mutable
    flake8-pep3101
    flake8-print
    flake8-quotes
    flake8-string-format
    flake8-use-fstring
    pep8-naming
    dictdiffer
    pydantic>=1.6.1

[sematic-release]
version_variable = compliance_trestle_flask_demo/__init__.py:__version__
upload_to_pypi = false
version_source = commit

[flake8]
# WARNING: This should be kept compatible with .pre-commit-config.yaml
ignore = P1,C812,C813,C814,C815,C816,W503
max-line-length=120

